Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104713

GCC 12: failure to build from source [<QtTools>]

    XMLWordPrintable

Details

    • 2
    • e969141544 (qt/qttools/dev) e969141544 (qt/tqtc-qttools/dev) 14b81ebc4b (qt/qttools/6.3) 4e3a3a8d5e (qt/qttools/6.4) 14b81ebc4b (qt/tqtc-qttools/6.3) 4e3a3a8d5e (qt/tqtc-qttools/6.4) 765acc8bd1 (qt/tqtc-qttools/6.2) 14b81ebc4b (qt/qttools/6.3.2)
    • Team B Foundation Sprint 60

    Description

      Current dev fails to compile with GCC 12:

      In file included from /usr/lib/llvm-10/include/clang/AST/Decl.h:21,
                       from /usr/lib/llvm-10/include/clang/AST/Attr.h:18,
                       from /usr/lib/llvm-10/include/clang/AST/RecursiveASTVisitor.h:16,
                       from /home/marc/Qt/qt5/qttools/src/linguist/lupdate/clangtoolastreader.h:16,
                       from /home/marc/Qt/qt5/qttools/src/linguist/lupdate/cpp_clang.cpp:5:
      In member function ‘T* clang::LazyOffsetPtr<T, OffsT, Get>::get(clang::ExternalASTSource*) const [with T = clang::CXXBaseSpecifier; OffsT = long unsigned int; T* (clang::ExternalASTSource::* Get)(OffsT) = &clang::ExternalASTSource::GetExternalCXXBaseSpecifiers]’,
          inlined from ‘clang::CXXBaseSpecifier* clang::CXXRecordDecl::DefinitionData::getBases() const’ at /usr/lib/llvm-10/include/clang/AST/DeclCXX.h:338:25,
          inlined from ‘clang::CXXBaseSpecifier* clang::CXXRecordDecl::bases_begin()’ at /usr/lib/llvm-10/include/clang/AST/DeclCXX.h:594:61,
          inlined from ‘clang::CXXBaseSpecifier* clang::CXXRecordDecl::bases_end()’ at /usr/lib/llvm-10/include/clang/AST/DeclCXX.h:596:55,
          inlined from ‘clang::CXXRecordDecl::base_class_range clang::CXXRecordDecl::bases()’ at /usr/lib/llvm-10/include/clang/AST/DeclCXX.h:588:12:
      /usr/lib/llvm-10/include/clang/AST/ExternalASTSource.h:409:54: error: ‘this’ pointer is null [-Werror=nonnull]
        409 |       Ptr = reinterpret_cast<uint64_t>((Source->*Get)(Ptr >> 1));
            |                                        ~~~~~~~~~~~~~~^~~~~~~~~~
      In member function ‘T* clang::LazyOffsetPtr<T, OffsT, Get>::get(clang::ExternalASTSource*) const [with T = clang::CXXBaseSpecifier; OffsT = long unsigned int; T* (clang::ExternalASTSource::* Get)(OffsT) = &clang::ExternalASTSource::GetExternalCXXBaseSpecifiers]’,
          inlined from ‘clang::CXXBaseSpecifier* clang::CXXRecordDecl::DefinitionData::getBases() const’ at /usr/lib/llvm-10/include/clang/AST/DeclCXX.h:338:25,
          inlined from ‘clang::CXXBaseSpecifier* clang::CXXRecordDecl::bases_begin()’ at /usr/lib/llvm-10/include/clang/AST/DeclCXX.h:594:61,
          inlined from ‘clang::CXXRecordDecl::base_class_range clang::CXXRecordDecl::bases()’ at /usr/lib/llvm-10/include/clang/AST/DeclCXX.h:588:12:
      /usr/lib/llvm-10/include/clang/AST/ExternalASTSource.h:409:54: error: ‘this’ pointer is null [-Werror=nonnull]
        409 |       Ptr = reinterpret_cast<uint64_t>((Source->*Get)(Ptr >> 1));
            |                                        ~~~~~~~~~~~~~~^~~~~~~~~~
      cc1plus: all warnings being treated as errors
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mmutz Marc Mutz
            mmutz Marc Mutz
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: