linguist: work around Clang 10 headers throwing GCC 12 -Werror=nonnull

We can't fix these 3rd-party headers, so disable the warning when
including Clang/LLVM headers.

Fixes: QTBUG-104713
Change-Id: I7d851a4a4237c3d3500609d2e1f6c8ceb43f204b
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>
(cherry picked from commit e969141544cbd2c5adce3847d5baa9c98dcf0bc4)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>